<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/dialog_overlay"
    android:gravity="center_vertical|center_horizontal"
    tools:ignore="Overdraw"
    android:layout_margin="16dp">


    <TextView
        android:id="@+id/dialog_spanishLeague"
        fontPath="fonts/OpenSans-Regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/dark_gray_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/spanish_league"
        tools:ignore="MissingPrefix" />

    <View
        android:id="@+id/view1"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:background="@color/gray_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_spanishLeague"/>


    <TextView
        android:id="@+id/dialog_premierLeague"
        fontPath="fonts/OpenSans-Regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/dark_gray_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"
        android:text="@string/premier_league"
        tools:ignore="MissingPrefix" />

    <View
        android:id="@+id/view2"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:background="@color/gray_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_premierLeague"/>

    <TextView
        android:id="@+id/dialog_italianLeague"
        fontPath="fonts/OpenSans-Regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/dark_gray_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2"
        android:text="@string/italian_league"
        tools:ignore="MissingPrefix" />

    <View
        android:id="@+id/view3"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:background="@color/gray_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_italianLeague"
        android:layout_marginBottom="16dp"/>

</android.support.constraint.ConstraintLayout>