<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    tools:context=".view.activities.DetailTeamActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/detailActivity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_collapseMode="pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detailActivity_logoTeam"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/detailActivity_nameTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginLeft="16dp"
                android:gravity="center|left"
                android:text="Arsenal"
                android:textSize="20dp"/>
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/detailTeamBanner"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="@color/gray"
        android:maxHeight="200dp"
        android:minHeight="170dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailActivity_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/detailTeamBanner">

        <LinearLayout
            android:id="@+id/constraintContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintGeneralInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_bottom_shadow"
                android:elevation="6dp"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textViewName"
                    fontPath="fonts/OpenSans-Semibold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_name"
                    android:textColor="@color/dark_gray_content_text"
                    android:textSize="14dp"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/detailTeam_teamName"
                    fontPath="fonts/OpenSans-Regular.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/dark_gray_text"
                    android:textSize="11dp"
                    app:layout_constraintTop_toBottomOf="@+id/textViewName"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/textViewYear"
                    fontPath="fonts/OpenSans-Semibold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/team_foundation"
                    android:textColor="@color/dark_gray_content_text"
                    android:textSize="14dp"
                    app:layout_constraintTop_toBottomOf="@+id/detailTeam_teamName"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/detailService_teamYear"
                    fontPath="fonts/OpenSans-Regular.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/dark_gray_text"
                    android:textSize="11dp"
                    app:layout_constraintTop_toBottomOf="@+id/textViewYear"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/textViewDescription"
                    fontPath="fonts/OpenSans-Semibold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/team_description"
                    android:textColor="@color/dark_gray_content_text"
                    android:textSize="14dp"
                    app:layout_constraintTop_toBottomOf="@+id/detailService_teamYear"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/detailService_teamDescription"
                    fontPath="fonts/OpenSans-Regular.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/dark_gray_text"
                    android:textSize="11dp"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDescription"
                    tools:ignore="MissingPrefix" />


            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_bottom_shadow"
                android:elevation="6dp"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/constraintGeneralInformation"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/textViewLogo"
                    fontPath="fonts/OpenSans-Semibold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_logo"
                    android:textColor="@color/dark_gray_content_text"
                    android:textSize="14dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/textViewJersey"
                    fontPath="fonts/OpenSans-Semibold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_camiseta"
                    android:textColor="@color/dark_gray_content_text"
                    android:textSize="14dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    tools:ignore="MissingPrefix" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <ImageView
                    android:id="@+id/detailTeam_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLogo" />


                <ImageView
                    android:id="@+id/detailTeam_jersey"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textViewJersey" />


            </android.support.constraint.ConstraintLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>